2011-12-17  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Try to make detection of compilers which don't support
	locale/characterset handling for string literals somewhat friendly.
	* configure: regenerate

2011-12-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPortCoder.m (-versionForClassName:): Use NSInteger for
	version to avoid compiler warning on 64-bit system.

2011-12-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m:
	Whenever we synchronize in a state where we have changes to write,
	but are in read-only mode (no database existed on startup, or we
	couldn't create the lock file on startup), check to see if the
	database is now writable (we can create the lock file).
	Should fix problem where new defaults files were not getting created.

2011-12-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSProcessInfo.m:
	* Source/NSSocketPort.m:
	* Source/NSMessagePortNameServer.m:
	* Source/NSDebug.m:
	* Source/NSDistributedLock.m:
	* Source/GSHTTPURLHandle.m:
	* Source/NSMessagePort.m:
	* Source/NSFileManager.m:
	* Source/NSString.m:
	* Source/NSObject.m:
	* Source/NSThread.m:
	* Source/NSData.m:
	* Source/GSNetwork.h:
	* Source/GSFormat.m:
	* Source/GSFileHandle.m:
	* Source/NSTask.m:
	* SSL/GSSSLHandle.m:
	* SSL/configure.ac:
	* SSL/configure:
	* SSL/config.h.in:
	* configure.ac:
	* configure:
	* Headers/GNUstepBase/config.h.in:
	* Tools/gdnc.m:
	Support fcntl.h and signal.h not being in the 'sys' subdirectory
	(for android and any other systems with that header layout).

2011-12-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSObject.h:
	* Headers/Foundation/NSObjCRuntime.h:
	Move a few declarations between headers to match OSX, and update
	NSNotFound to be NSIntegerMax for compatibility on 64bit platforms.

2011-12-13  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/GSSSLHandle.m: Allow cipher list to be set using GSCipherList
	default.

2011-12-08  Wolfgang Lux  <wolfgang.lux@gmail.com>
